syntax = "proto3";
package attackmate.remote;
import "base_command.proto";

// Maps to attackmate.schemas.sliver.SliverGenerateCommand
message SliverGenerateCommandProto {
    BaseCommandFields base = 1;
    // string type = "sliver";
    // string cmd = "generate_implant";
    optional string target = 100;
    string c2url = 101;
    optional string format = 102;
    string name = 103; // Implant profile name
    optional string filepath = 104;
    optional bool IsBeacon = 105;
    optional string BeaconInterval = 106; // StringNumber
    optional bool RunAtLoad = 107;
    optional bool Evasion = 108;
}
